[package]
name = "iced_tour"
version = "0.1.2"
edition = "2021"
rust-version = "1.88"
authors = ["Bartlomiej Tyrpien"]
description = "Guided tour / onboarding overlay for iced applications"
repository = "https://github.com/bartlomein/iced_tour"
homepage = "https://github.com/bartlomein/iced_tour"
documentation = "https://docs.rs/iced_tour"
license = "MIT OR Apache-2.0"
keywords = ["iced", "tour", "onboarding", "gui", "overlay"]
categories = ["gui", "visualization"]
readme = "README.md"
exclude = ["CLAUDE.md", ".claude/"]

[dependencies]
iced = { version = "0.14", features = ["canvas", "advanced"] }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "basic"

[[example]]
name = "minimal"

[[example]]
name = "widget_id"

[[example]]
name = "theming"
